// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provider messages multiple Languages cs-locale 1`] = `
<IntlProvider
  locale="cs"
  messages={
    Object {
      "cs": Object {
        "some.msg": "Zpráva",
      },
      "en": Object {
        "some.msg": "Message",
      },
    }
  }
>
  <IntlProvider
    defaultFormats={Object {}}
    defaultLocale="en"
    fallbackOnEmptyString={true}
    formats={Object {}}
    locale="cs"
    messages={
      Object {
        "default.cancel": "Zrušit",
        "default.delete": "Smazat",
        "default.remove": "Odstranit",
        "default.save": "Save",
        "some.msg": "Zpráva",
      }
    }
    onError={[Function]}
    onWarn={[Function]}
    textComponent={Symbol(react.fragment)}
  >
    <div>
      Test
    </div>
  </IntlProvider>
</IntlProvider>
`;

exports[`provider messages multiple Languages no locale 1`] = `
<IntlProvider
  locale={null}
  messages={
    Object {
      "cs": Object {
        "some.msg": "Zpráva",
      },
      "en": Object {
        "some.msg": "Message",
      },
    }
  }
>
  <IntlProvider
    defaultFormats={Object {}}
    defaultLocale="en"
    fallbackOnEmptyString={true}
    formats={Object {}}
    locale="en"
    messages={
      Object {
        "default.cancel": "Cancel",
        "default.delete": "Delete",
        "default.remove": "Remove",
        "default.save": "Save",
        "some.msg": "Message",
      }
    }
    onError={[Function]}
    onWarn={[Function]}
    textComponent={Symbol(react.fragment)}
  >
    <div>
      Test
    </div>
  </IntlProvider>
</IntlProvider>
`;

exports[`provider messages no langauge 1`] = `
<IntlProvider
  locale={null}
  messages={
    Object {
      "some.msg": "Message",
    }
  }
>
  <IntlProvider
    defaultFormats={Object {}}
    defaultLocale="en"
    fallbackOnEmptyString={true}
    formats={Object {}}
    locale="en"
    messages={
      Object {
        "default.cancel": "Cancel",
        "default.delete": "Delete",
        "default.remove": "Remove",
        "default.save": "Save",
        "some.msg": "Message",
      }
    }
    onError={[Function]}
    onWarn={[Function]}
    textComponent={Symbol(react.fragment)}
  >
    <div>
      Test
    </div>
  </IntlProvider>
</IntlProvider>
`;

exports[`provider should render correctly 1`] = `
<IntlProvider
  locale={null}
>
  <IntlProvider
    defaultFormats={Object {}}
    defaultLocale="en"
    fallbackOnEmptyString={true}
    formats={Object {}}
    locale="en"
    messages={
      Object {
        "default.cancel": "Cancel",
        "default.delete": "Delete",
        "default.remove": "Remove",
        "default.save": "Save",
      }
    }
    onError={[Function]}
    onWarn={[Function]}
    textComponent={Symbol(react.fragment)}
  >
    <div>
      Test
    </div>
  </IntlProvider>
</IntlProvider>
`;
